<resources>
    <string name="app_name">Casero Móvil</string>
    <string name="title_activity_client_register">Registrar clientes</string>
    <string name="title_ok">Enviar</string>
    <string name="title_date">Fechas</string>
    <string name="title_clientes_registrados">Clientes</string>
    <string name="checkin_text">Fecha de llegada</string>
    <string name="title_action_all">Todas</string>
    <string name="title_send">Enviar</string>
    <string name="title_add_client">Pasaportes</string>
    <string name="title_activity_dashboard_controller">DashboardController</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_tray">TrayActivity</string>
    <string name="title_action_pending">Pendientes</string>
    <string name="title_action_confirmed">Confirmadas</string>
    <string name="client_passport">Pasaporte</string>
    <string name="client_casero_code">Confirmación</string>
    <string name="check_in_text">Entrada</string>
    <string name="check_out_text">Salida</string>
    <string name="message_action_resent">La actividad ha sido reenviada</string>

    <string name="title_activity_about">AboutActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="text_action_pending">Pendiente</string>
    <string name="text_action_finished">Confirmada</string>
    <string name="msg_close_app_due_permissions">La aplicación deberá cerrarse por no contar con los permisos necesarios para funcionar correctamente.</string>
    <string name="title_message">Historial de registros</string>
    <string name="title_menssage">Mensajes</string>
    <string name="rs_text1_scene1">¡Fantástico!</string>
    <string name="rs_text2_scene1">Ha instalado Casero Móvil</string>
    <string name="rs_text3_scene1">Iniciemos su inscripción en nuestro sistema</string>
    <string name="scene_2_text_1">¡Preséntese!</string>
    <string name="scene_2_text_2">Sus datos son confidenciales</string>
    <string name="rs_text2_scene2">Precise bien su dirección</string>
    <string name="new_register">Registrar</string>
    <string name="rs_text2_scene3">Verifique bien sus acredenciales</string>
    <string name="rs_text1_scene4">Usted será inscrito como:</string>
    <string name="rs_text1_scene3">Servicio Web</string>
    <string name="rs_text0_scene4">Verificar</string>
    <string name="title_creator">Desarrolladores</string>
    <string name="title_develop">Desarrolladores</string>
    <string name="app_version">versión: 1.1.1</string>
</resources>
