<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view_report="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/scene_1_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:ems="10"
            android:paddingLeft="5dp"
            android:text="@string/rs_text1_scene1"
            android:textColor="@color/white"
            android:textSize="35dp" />

        <TextView
            android:id="@+id/scene_1_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scene_1_text_1"
            android:background="@color/colorPrimary"
            android:ems="30"
            android:paddingLeft="5dp"
            android:text="@string/rs_text2_scene1"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/scene_1_text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/scene_1_text_2"
            android:background="@color/colorPrimary"
            android:ems="30"
            android:paddingLeft="5dp"
            android:text="@string/rs_text3_scene1"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="end"
            android:orientation="horizontal"
            android:id="@+id/linearLayout3">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                card_view_report:cardCornerRadius="10dp">

                <Button
                    android:id="@+id/scene_1_bt_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="Saltar registro"
                    android:textColor="@color/white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                card_view_report:cardCornerRadius="10dp">

                <Button
                    android:id="@+id/scene_1_bt_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="Siguiente"
                    android:textColor="@color/white" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <!--<EditText-->
            <!--android:id="@+id/editText2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_above="@+id/linearLayout3"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:background="@color/colorPrimary"-->
            <!--android:ems="30"-->
            <!--android:paddingLeft="5dp"-->
            <!--android:text=""-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="20dp"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_alignParentEnd="true" />-->


    </RelativeLayout>
</LinearLayout>